Add link to userscript

--- a/src/app/slither.component.html
+++ b/src/app/slither.component.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="http://slither.io">slither.io</a></li>
-        <li><a href="#">userscript</a></li>
+        <li><a href="https://raw.githubusercontent.com/joshbeitler/slither/master/tampermonkey-script.js">userscript</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
